@@ -7,7 +7,6 @@ DESIGN
 HIGH
 - move Molarity sim to a new project?
 - restore "Show values" feature (deleted in [57987] and [58016])
-- show min/max/current values on concentration display
 - show min/max/current value on sliders, with editable current value
 
 MEDIUM
