@@ -16,6 +16,7 @@ soluteAmount=<html><center>Solute<br>Amount<br>(moles)</html>
 solutionConcentration=<html><center>Solution<br>Concentration<br>(Molarity)</html>
 solutionVolume=<html><center>Solution<br>Volume<br>(Liters)</html>
 units.liters=L
+units.molarity=M
 zero=zero
 
 # Solutes
@@ -31,3 +32,4 @@ potassiumPermanganate=Potassium permanganate
 
 # patterns
 pattern.0label={0}:
+pattern.0value.1units={0} {1}
