@@ -33,6 +33,7 @@ public class DilutionsResources {
         public static final String NONE = RESOURCES.getLocalizedString( "none" );
         public static final String MOLARITY = RESOURCES.getLocalizedString( "molarity" );
         public static final String PATTERN_0LABEL = RESOURCES.getLocalizedString( "pattern.0label" );
+        public static final String PATTERN_0VALUE_1UNITS = RESOURCES.getLocalizedString( "pattern.0value.1units" );
         public static final String POTASSIUM_CHROMATE = RESOURCES.getLocalizedString( "potassiumChromate" );
         public static final String POTASSIUM_DICHROMATE = RESOURCES.getLocalizedString( "potassiumDichromate" );
         public static final String POTASSIUM_PERMANGANATE = RESOURCES.getLocalizedString( "potassiumPermanganate" );
@@ -43,6 +44,7 @@ public class DilutionsResources {
         public static final String SOLUTION_CONCENTRATION = RESOURCES.getLocalizedString( "solutionConcentration" );
         public static final String SOLUTION_VOLUME = RESOURCES.getLocalizedString( "solutionVolume" );
         public static final String UNITS_LITERS = RESOURCES.getLocalizedString( "units.liters" );
+        public static final String UNITS_MOLARITY = RESOURCES.getLocalizedString( "units.molarity" );
         public static final String ZERO = RESOURCES.getLocalizedString( "zero" );
 
         // Additional strings used by the unpublished DilutionsApplication.
